# virtual-live-streamer

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  streamer.html
config/: config.example.yaml
data/sop/: chat_sop.md  streaming_sop.md  teaching_sop.md
docs/: index.html
scripts/: demo_preview.py  download_models.py  test_autonomous.py  test_pipeline.py  test_stream_preview.py  test_swap_quick.py  test_talking.py
skills/virtual-live-streamer/: SKILL.md  manifest.json
skills/virtual-live-streamer/knowledge/: streaming-setup.md
skills/virtual-live-streamer/strategies/: chat-response.md  persona-management.md
skills/virtual-live-streamer/tests/: benchmark.json  smoke.json
src/: curriculum_agent.py  hermes_bridge.py  learning_agent.py  research_agent.py  server.py  speech_queue.py  twitch_bridge.py
src/agent/: __init__.py  agent.py
src/chat/: __init__.py  reader.py
src/face_engine/: __init__.py  engine.py
src/orchestrator/: main.py
src/stream/: __init__.py  pipeline.py
src/talking_head/: __init__.py  engine.py
src/tts/: __init__.py  engine.py
src/utils/: config.py  logging.py
